# ccf

./: README.md  基于Python的MySQL数据库备份恢复方案设计与实现.md  用户使用手册.md
db_guardian/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
db_guardian/apps/: __init__.py
db_guardian/apps/authentication/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
db_guardian/apps/authentication/migrations/: 0001_initial.py  0002_init_roles_and_permissions.py
db_guardian/apps/backups/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
db_guardian/apps/backups/migrations/: 0001_initial.py  0002_backup_types_and_base.py  0003_alter_backuprecord_backup_type_and_more.py  0004_add_remote_storage_paths.py  0005_default_backup_paths.py  0006_backup_oneoff_task.py  (+3 more)
db_guardian/apps/instances/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
db_guardian/apps/sqlclient/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  validators.py  views.py
db_guardian/apps/webui/: __init__.py  apps.py  urls.py  views.py
db_guardian/common/: __init__.py
db_guardian/config/: urls.py
db_guardian/config/settings/: __init__.py  base.py  development.py  production.py
db_guardian/nginx.conf/: default.conf
db_guardian/static/backups/: storage_settings.js
db_guardian/static/webui/: app.css  app.js
db_guardian/tasks/: __init__.py  celery.py
db_guardian/templates/admin/: login.html
db_guardian/templates/webui/: index.html
(+23 files in other folders)
